# proc-macro-workshop

./: memo.md
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 04-variants-with-data.stderr  progress.rs
