[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1.0.69"